force-app/main/default/objects/Invoice_Payment__c/Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>Invoice Payment</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>