force-app/main/default/objects/Invoice_Payment__c/fields/QB_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Id__c</fullName>
    <externalId>true</externalId>
    <label>QB Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>