force-app/main/default/objects/Invoice_Payment__c/fields/QB_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Id__c</fullName>
    <label>QB Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>